Removed code duplication and added tests
Signed-off-by: hrishikesh-nalawade <hrishikesh.nalawade.17@gmail.com>